[package]
name = "sort-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.22.0"
image = "0.23.14"
opencv = "0.53.1"
adskalman = { version="0.11.0", git="https://github.com/anonymouscova/adskalman-rs" }
nalgebra = { version="0.28.0", features=["libm"] }
anyhow = "1.0.42"
log = { version="0.4.14", features = ["release_max_level_off"] }
lapjv = "0.2.0"
linear_assignment = { version="0.0.2", git="https://github.com/saebyn/linear-assignment-rust" }
ordered-float = "2.0"
libc = "0.2.98"
env_logger = "0.9.0"
redis = "0.21.0"
serde = { version="1.0.127", features = ["derive"] }
serde_json = "1.0.59"
bytes = "1.0.1"

[dev-dependencies]
colorous = "1.0.5"

# [patch.crates-io]
# linear_assignment = { git = "https://github.com/saebyn/linear-assignment-rust" }
# adskalman = {
